@@ -20,6 +20,7 @@
     path bar breadcrumbs on click no ctrl
     un/select bookmarks and devices on change dir #259
     Russian translation updated
+    status bar show selected/visible
 0.8.5   2013-01-14:
     fix left-click ignored in Open context submenu #31 #228
     Dialog fix progress bar; add auto-pulse
